tests/nginx-to-traefik/fixtures/basic-three-services/expected/common.service/overlays/dev/archive/argocd-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts: ["argocd.dev.awoo.org"]
    secretName: argocd-server-tls
  rules:
  - host: argocd.dev.awoo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
